--- a/examples/stop-watch/stop-watch.css
+++ b/examples/stop-watch/stop-watch.css
@@ -1,6 +1,5 @@
 :host {
 	font-family: monospace;
-	padding: 1em;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
@@ -14,7 +13,8 @@ button {
 	outline: none;
 	border: .1em solid black;
 	border-radius: 1em;
-	box-shadow: 1em 2em 0 0 #111;
+	box-shadow: .1em .2em 0 0 #111;
 	background-color: blue;
 	color: white;
+	padding: 1em;
 }
