--- a/examples/stop-watch/styles.css
+++ b/examples/stop-watch/styles.css
@@ -1,8 +1,20 @@
 body { 
-	font-size: 2em;
+	font-size: 4em;
+	font-weight: 900;
 	width: 100%;
 	height: 100%;
 	display: flex;
 	justify-content: center;
 	align-items: center;
 } 
+
+stop-watch {
+	font-family: monospace;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+}
+stop-watch * + * {
+	margin-top: 1em;
+}
