--- a/examples/stop-watch/stop-watch.css
+++ b/examples/stop-watch/stop-watch.css
@@ -7,5 +7,6 @@ button {
 	box-shadow: .1em .2em 0 0 #111;
 	background-color: blue;
 	color: white;
-	padding: 1em;
+	width: 10em;
+	height: 3em;
 }
