--- a/examples/stop-watch/stop-watch.css
+++ b/examples/stop-watch/stop-watch.css
@@ -2,11 +2,14 @@ button {
 	font-size: 4em;
 	font-weight: 900;
 	outline: none;
-	border: .1em solid black;
+	border: .1em solid #111;
 	border-radius: 1em;
 	box-shadow: .1em .2em 0 0 #111;
 	background-color: blue;
 	color: white;
 	width: 10em;
 	height: 3em;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
