--- a/examples/stop-watch/stop-watch.css
+++ b/examples/stop-watch/stop-watch.css
@@ -1,4 +1,5 @@
 button {
+	font-family: monospace;
 	font-size: 4em;
 	font-weight: 900;
 	outline: none;
@@ -7,9 +8,5 @@ button {
 	box-shadow: .1em .2em 0 0 #111;
 	background-color: blue;
 	color: white;
-	width: 10em;
-	height: 3em;
-	display: flex;
-	justify-content: center;
-	align-items: center;
+	padding: .62em;
 }
