--- a/examples/stop-watch/stop-watch.css
+++ b/examples/stop-watch/stop-watch.css
@@ -9,4 +9,68 @@ button {
 	background-color: blue;
 	color: white;
 	padding: .62em;
+	animation: scale-easeInElastic .8s linear .2s reverse forwards;
+}
+
+button:first-of-type {
+	animation-delay: 0s;
+}
+
+@keyframes scale-easeInElastic {
+	0% {
+		transform: scale(1);
+	}
+
+	4% {
+		transform: scale(1);
+	}
+
+	8% {
+		transform: scale(1);
+	}
+
+	14% {
+		transform: scale(1);
+	}
+
+	18% {
+		transform: scale(1);
+	}
+
+	26% {
+		transform: scale(1.01);
+	}
+
+	28% {
+		transform: scale(1.01);
+	}
+
+	40% {
+		transform: scale(0.98);
+	}
+
+	42% {
+		transform: scale(0.98);
+	}
+
+	56% {
+		transform: scale(1.05);
+	}
+
+	58% {
+		transform: scale(1.04);
+	}
+
+	72% {
+		transform: scale(0.87);
+	}
+
+	86% {
+		transform: scale(1.37);
+	}
+
+	100% {
+		transform: scale(0);
+	}
+
 }
