--- a/examples/stop-watch/stop-watch.css
+++ b/examples/stop-watch/stop-watch.css
@@ -3,18 +3,33 @@ button {
 	font-size: 8em;
 	font-weight: 900;
 	outline: none;
-	border: .1em solid #111;
+	border: none;
 	border-radius: 1em;
-	box-shadow: .1em .2em 0 0 #111;
+	box-shadow: 
+		.05em .1em .01em .01em #003
+		inset .05em .1em .01em .01em #ffa8;
 	background-color: blue;
 	color: white;
 	padding: .62em;
-	transform: scale(0);
-	animation: scale-easeInElastic 1.2s linear .3s reverse forwards;
+	animation: scale-easeInElastic 1.2s linear .3s reverse both;
+	transition: box-shadow .2s ease-out;
 }
 
 button:first-of-type {
 	animation-delay: 0s;
+}
+
+button:hover {
+	box-shadow: 
+		.1em .2em .01em .01em #0038
+		inset .1em .2em .01em .01em #ffa8;
+}
+
+button:active {
+	color: #ff0;
+	box-shadow: 
+		.1em .2em .01em .01em #003f
+		inset .1em .2em .01em .01em #ff0f;
 }
 
 @keyframes scale-easeInElastic {
