--- a/examples/stop-watch/stop-watch.css
+++ b/examples/stop-watch/stop-watch.css
@@ -6,8 +6,8 @@ button {
 	border: none;
 	border-radius: 1em;
 	box-shadow: 
-		.05em .1em .02em .02em #003,
-		inset .1em .2em .01em .01em #ffa8;
+		.05em .1em .02em .02em #004a,
+		inset .1em .2em .01em .01em #ffaa;
 	background-color: blue;
 	color: white;
 	padding: .62em;
@@ -21,14 +21,14 @@ button:first-of-type {
 
 button:hover {
 	box-shadow: 
-		.1em .2em .01em .01em #0038,
+		.1em .2em .01em .01em #004f,
 		inset .05em .1em .02em .02em #ffa8;
 }
 
 button:active {
 	color: #ff0;
 	box-shadow: 
-		.05em .1em .04em .04em #003f,
+		.05em .1em .04em .04em #000f,
 		inset .05em .1em .04em .04em #ff0f;
 }
 
