--- a/examples/stop-watch/stop-watch.css
+++ b/examples/stop-watch/stop-watch.css
@@ -4,10 +4,12 @@ button {
 	font-weight: 900;
 	outline: none;
 	border: none;
+	border-top: .02em solid #ff7;
+	border-left: .02em solid #ff7;
 	border-radius: 1em;
 	box-shadow: 
 		.05em .1em .02em .02em #004a,
-		inset .1em .2em .01em .01em #ffaa;
+		inset .1em .2em .01em .01em #ff7a;
 	background-color: blue;
 	color: white;
 	padding: .62em;
@@ -22,14 +24,14 @@ button:first-of-type {
 button:hover {
 	box-shadow: 
 		.1em .2em .01em .01em #004f,
-		inset .05em .1em .02em .02em #ffa8;
+		inset .05em .1em .02em .02em #ff79;
 }
 
 button:active {
 	color: #ff0;
 	box-shadow: 
-		.05em .1em .04em .04em #000f,
-		inset .05em .1em .04em .04em #ff0f;
+		.05em .1em .1em .01em #000f,
+		inset .05em .1em .04em .04em #ff7f;
 }
 
 @keyframes scale-easeInElastic {
