--- a/examples/stop-watch/stop-watch.css
+++ b/examples/stop-watch/stop-watch.css
@@ -4,11 +4,10 @@ button {
 	font-weight: 900;
 	outline: none;
 	border: none;
-	border-top: .02em solid #ff7;
-	border-left: .02em solid #ff7;
 	border-radius: 1em;
 	box-shadow: 
 		.05em .1em .02em .02em #004a,
+		inset .01em .01em .01em .01em #ff7f,
 		inset .075em .15em .01em .01em #ff7a;
 	background-color: blue;
 	color: white;
@@ -24,6 +23,7 @@ button:first-of-type {
 button:hover {
 	box-shadow: 
 		.1em .2em .01em .01em #004f,
+		inset .01em .01em .01em .01em #ff7f,
 		inset .05em .1em .02em .02em #ff79;
 }
 
