--- a/examples/stop-watch/stop-watch.css
+++ b/examples/stop-watch/stop-watch.css
@@ -13,7 +13,9 @@ button {
 	color: white;
 	padding: .62em;
 	animation: scale-easeInElastic .8s linear .5s reverse both;
-	transition: box-shadow .2s ease-out;
+	transition: 
+		box-shadow .2s ease-out,
+		background-color .2s linear;
 }
 
 button:first-of-type {
