--- a/examples/stop-watch/stop-watch.css
+++ b/examples/stop-watch/stop-watch.css
@@ -10,7 +10,7 @@ button {
 		inset .02em .02em .05em .01em #ff7f,
 		inset .075em .15em .01em .01em #ff7a;
 	background-color: #33d;
-	color: white;
+	color: #ffe;
 	padding: .62em;
 	animation: scale-easeInElastic .8s linear .5s reverse both;
 	transition: 
